@@ -185,7 +185,9 @@ change data in any entry.
 <LI>
 Editing settings: here you can set the maximum number of changes that can be
 undone and pick the format the the cursor offset will be shown at. This format
-can be either decimal or hexadecimal or a custom printf style string.</LI>
+can be either decimal or hexadecimal or a custom printf style string. You can
+also set whether the hex editing widget will show an extra column with the
+offsets of beginning of lines on the left.</LI>
 <LI>
 Display settings: here you can set the default data grouping type and the
 display font.</LI>
@@ -218,7 +220,7 @@ installing and/or running GHex, feel free to e-mail me.
 
 <P>You can check the current status and/or get the latest stable release of
 GHex via WWW at 
-<A HREF="http://pluton.ijs.si/~jaka/soft.html#GHEX">this page.</A>
+<A HREF="http://pluton.ijs.si/~jaka/gnome.html">this page.</A>
 &nbsp; The most recent version is also available at the Gnome CVS repository
 in module gnome-utils.
 
